--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "fantasy-hockey-notifier",
-  "version": "1.0.1",
-  "description": "",
-  "main": "fantasy-hockey-notifier.js",
-  "scripts": {},
+  "version": "2.0.0",
+  "description": "Send notifications for transactions in an ESPN Fantasy Hockey league; designed to be used with AWS Lambda",
+  "scripts": {
+    "start": "npm run build && node -r dotenv/config .build/main.js",
+    "start-prebuilt": "node -r dotenv/config .build/main.js",
+    "build": "tsc",
+    "test": "echo \"No tests for now\" && exit 0",
+    "serverless-version": "serverless --version",
+    "deploy-dev": "serverless deploy --stage dev --conceal",
+    "deploy-prod": "serverless deploy --stage prod --conceal"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ftalburt/fantasy-hockey-notifier.git"
@@ -16,7 +23,18 @@
   "homepage": "https://github.com/ftalburt/fantasy-hockey-notifier#readme",
   "dependencies": {
     "aws-sdk": "^2.725.0",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9"
+    "dotenv": "^8.2.0",
+    "source-map-support": "^0.5.19",
+    "superagent": "^6.0.0"
+  },
+  "devDependencies": {
+    "@tsconfig/node12": "^1.0.7",
+    "@types/node": "^14.0.27",
+    "@types/request-promise-native": "^1.0.17",
+    "@types/superagent": "^4.1.9",
+    "serverless": "^1.80.0",
+    "serverless-plugin-typescript": "^1.1.9",
+    "serverless-pseudo-parameters": "^2.5.0",
+    "typescript": "^3.9.7"
   }
 }
