--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@tsconfig/node12",
   "compilerOptions": {
     "outDir": ".build",
+    "rootDir": ".",
     "sourceMap": true
-  }
+  },
+  "include": ["src/**/*"]
 }
