--- a/.github/workflows/deploy-to-lambda.yml
+++ b/.github/workflows/deploy-to-lambda.yml
@@ -13,9 +13,10 @@ jobs:
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version-file: '.nvmrc'
+          cache: 'npm'
       - run: npm ci
       - run: npm run deploy-${{ steps.extract_branch.outputs.branch == 'master' && 'prod' || steps.extract_branch.outputs.branch }}
         env:
