--- a/serverless.yml
+++ b/serverless.yml
@@ -1,12 +1,10 @@
 service: fantasy-hockey-notifier
-variablesResolutionMode: 20210326
 
 provider:
   name: aws
   eventBridge:
     useCloudFormation: false
   runtime: nodejs14.x
-  lambdaHashingVersion: 20201221
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
   environment:
@@ -15,12 +13,14 @@ provider:
     ESPN_S2_COOKIE: ${ssm:/fantasy-hockey-notifier/${self:provider.stage}/ESPN_S2_COOKIE}
     DISCORD_WEBHOOK: ${ssm:/fantasy-hockey-notifier/${self:provider.stage}/DISCORD_WEBHOOK,null}
     AWS_DYNAMO_DB_TABLE_NAME: fantasy-hockey-notifier-${self:provider.stage}
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:GetItem
-        - dynamodb:UpdateItem
-      Resource: 'arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/fantasy-hockey-notifier-${self:provider.stage}'
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - dynamodb:GetItem
+            - dynamodb:UpdateItem
+          Resource: 'arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/fantasy-hockey-notifier-${self:provider.stage}'
 
 functions:
   fantasy-hockey-notifier:
