--- a/package.json
+++ b/package.json
@@ -1,40 +1,154 @@
 {
-  "name": "fantasy-hockey-notifier",
-  "version": "2.5.0",
+  "name": "fantasy-hockey-notifier-cdk",
   "description": "Send notifications for transactions in an ESPN Fantasy Hockey league; designed to be used with AWS Lambda",
-  "scripts": {
-    "start": "npm run build && node -r dotenv/config .build/src/main.js",
-    "start-prebuilt": "node -r dotenv/config .build/src/main.js",
-    "build": "tsc",
-    "test": "echo \"No tests for now\" && exit 0",
-    "serverless-version": "serverless --version",
-    "deploy-dev": "serverless deploy --stage dev --conceal",
-    "deploy-prod": "serverless deploy --stage prod --conceal"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ftalburt/fantasy-hockey-notifier.git"
+    "url": "https://github.com/ftalburt/fantasy-hockey-notifier-cdk.git"
   },
-  "author": "Forrest Talburt",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ftalburt/fantasy-hockey-notifier/issues"
+  "scripts": {
+    "build": "npx projen build",
+    "bump": "npx projen bump",
+    "clobber": "npx projen clobber",
+    "compat": "npx projen compat",
+    "compile": "npx projen compile",
+    "default": "npx projen default",
+    "docgen": "npx projen docgen",
+    "eject": "npx projen eject",
+    "eslint": "npx projen eslint",
+    "package": "npx projen package",
+    "package-all": "npx projen package-all",
+    "package:js": "npx projen package:js",
+    "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
+    "pre-compile": "npx projen pre-compile",
+    "release": "npx projen release",
+    "test": "npx projen test",
+    "test:update": "npx projen test:update",
+    "test:watch": "npx projen test:watch",
+    "unbump": "npx projen unbump",
+    "upgrade": "npx projen upgrade",
+    "watch": "npx projen watch",
+    "projen": "npx projen",
+    "start": "ts-node --project tsconfig.dev.json src/main.ts"
   },
-  "homepage": "https://github.com/ftalburt/fantasy-hockey-notifier#readme",
+  "author": {
+    "name": "Forrest Talburt",
+    "organization": false
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^14",
+    "@types/superagent": "^4.1.15",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "aws-cdk-lib": "2.1.0",
+    "constructs": "10.0.5",
+    "esbuild": "^0.14.25",
+    "eslint": "^8",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "jest-junit": "^13",
+    "jsii": "^1.54.0",
+    "jsii-diff": "^1.54.0",
+    "jsii-docgen": "^6.1.28",
+    "json-schema": "^0.4.0",
+    "npm-check-updates": "^12",
+    "prettier": "^2.5.1",
+    "projen": "^0.52.62",
+    "standard-version": "^9",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
+  },
+  "peerDependencies": {
+    "aws-cdk-lib": "^2.1.0",
+    "constructs": "^10.0.5"
+  },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.48.0",
-    "@aws-sdk/client-sns": "^3.48.0",
-    "dotenv": "^14.3.2",
+    "@aws-sdk/client-dynamodb": "^3.53.0",
+    "@aws-sdk/client-sns": "^3.53.0",
+    "@aws-sdk/client-ssm": "^3.53.0",
+    "cdk-iam-floyd": "^0.333.0",
+    "dotenv": "^16.0.0",
     "source-map-support": "^0.5.21",
     "superagent": "^7.1.1"
   },
-  "devDependencies": {
-    "@tsconfig/node14": "^1.0.1",
-    "@types/node": "^17.0.13",
-    "@types/request-promise-native": "^1.0.18",
-    "@types/superagent": "^4.1.15",
-    "serverless": "^3.0.0",
-    "serverless-plugin-typescript": "^2.0.0",
-    "typescript": "^4.5.5"
-  }
+  "bundledDependencies": [
+    "@aws-sdk/client-dynamodb",
+    "@aws-sdk/client-sns",
+    "@aws-sdk/client-ssm",
+    "dotenv",
+    "source-map-support",
+    "superagent"
+  ],
+  "keywords": [
+    "aws-lambda",
+    "cdk",
+    "espn",
+    "fantasy-hockey",
+    "lambda",
+    "nhl"
+  ],
+  "engines": {
+    "node": ">= 14.0.0"
+  },
+  "main": "lib/index.js",
+  "license": "MIT",
+  "homepage": "https://github.com/ftalburt/fantasy-hockey-notifier-cdk.git#readme",
+  "version": "0.0.0",
+  "jest": {
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
+    ],
+    "clearMocks": true,
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "clover",
+      "cobertura",
+      "text"
+    ],
+    "coverageDirectory": "coverage",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "watchPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "reporters": [
+      "default",
+      [
+        "jest-junit",
+        {
+          "outputDirectory": "test-reports"
+        }
+      ]
+    ],
+    "preset": "ts-jest",
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.dev.json"
+      }
+    }
+  },
+  "types": "lib/index.d.ts",
+  "stability": "stable",
+  "jsii": {
+    "outdir": "dist",
+    "targets": {},
+    "tsc": {
+      "outDir": "lib",
+      "rootDir": "src"
+    }
+  },
+  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \"npx projen\"."
 }
