--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
+    "package:dotnet": "npx projen package:dotnet",
     "package:js": "npx projen package:js",
+    "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
@@ -144,7 +146,16 @@
   "stability": "stable",
   "jsii": {
     "outdir": "dist",
-    "targets": {},
+    "targets": {
+      "python": {
+        "distName": "fantasy-hockey-notifier-cdk",
+        "module": "fantasy_hockey_notifier_cdk"
+      },
+      "dotnet": {
+        "namespace": "Ftalburt.CDK",
+        "packageId": "Ftalburt.CDK.FantasyHockeyNotifierCdk"
+      }
+    },
     "tsc": {
       "outDir": "lib",
       "rootDir": "src"
